--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<h1>Here is a test page!</h1>
-
-<a href="COH.jar">Ya</a>
+<h1 align="center" style="color:red;" >My stuff</h1>
+<h2 align="center" style="color:orange;" ><a href="http://ludumdare.com/compo/author/ajayajayaj/">Ludum Dare</a></h2>
+<h3 align="center" style="color:green;" ><a href="https://play.google.com/store/apps/developer?id=Ajay+Ramachandran+-+The+best+person+in+the+world!!&hl=en">Google Play</a></h3>
+<h4 align="center" style="color:grey;" ><a href="https://github.com/ajayyy/">Git Hub</a></h4>
+<br><br><br><br><br>
+<h5 align="center" style="color:black;" >More later...</h5>
