--- a/yesnobetter.html
+++ b/yesnobetter.html
@@ -19,7 +19,7 @@
         <link rel="alternate" type="application/rss+xml" title="Yes, No, Better" href="http://yesnomaybe.info/yesnomaybe.xml">
     </head>
     <body class="maybe", id="background">
-        <b><a href="yesnobetter.tk" title="Yes, No, Better? - Click to get another Random Answer" class="maybe", id="choice">What's your question?</a></b>
+        <b><a href="http://yesnobetter.tk" title="Yes, No, Better? - Click to get another Random Answer" class="maybe", id="choice">What's your question?</a></b>
 
         <span id="face">
         	¯_(ツ)_/¯
