--- a/yesnobetter.html
+++ b/yesnobetter.html
@@ -41,7 +41,7 @@
 
 		<script type="text/javascript">
 
-			document.getElementById("face").innerHTML = "\\¯_(ツ)_/¯";
+			document.getElementById("face").innerHTML = "¯\\_(ツ)_/¯";
 
         	function randomAnswer(){
 
