--- a/yesnobetter.html
+++ b/yesnobetter.html
@@ -33,7 +33,7 @@
         </div>
         <br><br>
         <div class="footer">
-            <br>&copy; 2016 Ajay Ramachandran</center>
+            <br>Based on yesnomaybe.info</center>
         </div>
 
         <script type="text/javascript", src="http://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.0/seedrandom.min.js">
