--- a/yesnobetter.html
+++ b/yesnobetter.html
@@ -19,12 +19,13 @@
         <link rel="alternate" type="application/rss+xml" title="Yes, No, Better" href="http://yesnomaybe.info/yesnomaybe.xml">
     </head>
     <body class="maybe", id="background">
-        <b><a href="http://yesnobetter.tk" title="Yes, No, Better? - Click to get another Random Answer" class="maybe", id="choice">What's your question?</a></b>
+        <b><a href="http://yesnobetter.tk" title="Yes, No, Better? - Click to get another Random Answer" class="maybe", id="choice">What's your question?</a>
 
         <span id="face">
         	¯_(ツ)_/¯
         </span>
     	<br>
+	</b>
         <textarea cols="65" rows="12" name="question" id="question" title="What is your question?"></textarea><br><input type="submit" value=">> Click Button" title="Ask your question.", onclick="randomAnswer();">
 
         <br>
