--- a/index.html
+++ b/index.html
@@ -4,3 +4,14 @@
 <h4 align="center" style="color:grey;" ><a href="https://github.com/ajayyy/">Git Hub</a></h4>
 <br><br><br><br><br>
 <h5 align="center" style="color:black;" >More later...</h5>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Test Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8505654302097602"
+     data-ad-slot="5004424575"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
