--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1 align="center" style="color:red;" >My stuff</h1>
-<h2 align="center" style="color:orange;" ><a href="http://ludumdare.com/compo/author/ajayajayaj/">Ludum Dare</a></h2>
+<body link="orange"> <h2 align="center" style="color:orange;" ><a href="http://ludumdare.com/compo/author/ajayajayaj/">Ludum Dare</a></h2></body>
 <h3 align="center" style="color:green;" ><a href="https://play.google.com/store/apps/developer?id=Ajay+Ramachandran+-+The+best+person+in+the+world!!&hl=en">Google Play</a></h3>
 <h4 align="center" style="color:grey;" ><a href="https://github.com/ajayyy/">Git Hub</a></h4>
 <br><br><br><br><br>
