--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;">Ludum Dare</a></h2>
 <h3 align="center"><a href="https://play.google.com/store/apps/developer?id=Ajay+Ramachandran+-+The+best+person+in+the+world!!&hl=en" style="color:green;">Google Play</a></h3>
 <h4 align="center"><a href="https://github.com/ajayyy/" style="color:grey;">Git Hub</a></h4>
-<h5 align="center"><a href="/splats" style="color:blue;">There's also this...</a></h5>
+<h5 align="center"><a href="/splats" style="color:cyan;">There's also this...</a></h5>
 
 <br><br><br><br><br>
 <h5 align="center" style="color:black;" >More later...</h5>
