--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <br><br>
 
-<h5 align="center"><a href="/splats" style="color:cyan;">There's also this...</a></h5>
+<h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5>
 
 <br><br>
 <h5 align="center" style="color:black;" >More later...</h5>
