--- a/index.html
+++ b/index.html
@@ -17,3 +17,5 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
+<script data-cfasync="false" type="text/javascript">(function(w, d) { var s = d.createElement('script'); s.src = '//delivery.adrecover.com/15753/adRecover.js'; s.type = 'text/javascript'; s.async = true; (d.getElementsByTagName('head')[0] || d.getElementsByTagName('body')[0]).appendChild(s); })(window, document);</script>
