--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
+<head><script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
+<script>
+     
+     
+  var googletag = googletag || {};
+  googletag.cmd = googletag.cmd || [];
+</script>
+
+<script>
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/171157028/GameRestart', [336, 280], 'div-gpt-ad-1478899421291-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
+</script>
+</head>
+<!-- /171157028/GameRestart -->
+<div id='div-gpt-ad-1478899421291-0' style='height:280px; width:336px;'>
+<script>
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1478899421291-0'); });
+</script>
+</div>
+
 <h1 align="center" style="color:red;" >My stuff</h1>
 <h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;">Ludum Dare</a></h2>
 <h3 align="center"><a href="https://play.google.com/store/apps/developer?id=Ajay+Ramachandran+-+The+best+person+in+the+world!!&hl=en" style="color:green;">Google Play</a></h3>
@@ -7,15 +30,5 @@
 
 <h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5>
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Test Ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-8505654302097602"
-     data-ad-slot="5004424575"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
 <script data-cfasync="false" type="text/javascript">(function(w, d) { var s = d.createElement('script'); s.src = '//delivery.adrecover.com/15753/adRecover.js'; s.type = 'text/javascript'; s.async = true; (d.getElementsByTagName('head')[0] || d.getElementsByTagName('body')[0]).appendChild(s); })(window, document);</script>
