--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
-<head><script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
+<head>
+     <script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
 <script>
-     
-     
   var googletag = googletag || {};
   googletag.cmd = googletag.cmd || [];
 </script>
 
 <script>
   googletag.cmd.push(function() {
-    googletag.defineSlot('/171157028/GameRestart', [336, 280], 'div-gpt-ad-1478899421291-0').addService(googletag.pubads());
+    googletag.defineSlot('/171157028/GameRestart', [336, 280], 'div-gpt-ad-1478984323912-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
+    googletag.pubads().collapseEmptyDivs();
     googletag.enableServices();
   });
 </script>
 </head>
+
+
 <!-- /171157028/GameRestart -->
-<div id='div-gpt-ad-1478899421291-0' style='height:280px; width:336px;'>
+<div id='div-gpt-ad-1478984323912-0' style='height:280px; width:336px;'>
 <script>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1478899421291-0'); });
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1478984323912-0'); });
 </script>
 </div>
 
