--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script>
   googletag.cmd.push(function() {
     googletag.defineSlot('/171157028/GameRestart', [336, 280], 'div-gpt-ad-1479006188214-0').addService(googletag.pubads());
-
+         googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
 </script>
