--- a/index.html
+++ b/index.html
@@ -31,4 +31,14 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1479006188214-0');
 
 <h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- splats -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:336px;height:280px"
+     data-ad-client="ca-pub-8505654302097602"
+     data-ad-slot="6087312978"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 
