--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 </head>
 
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Splats -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:336px;height:280px"
+     data-ad-client="ca-pub-8505654302097602"
+     data-ad-slot="5993777779"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+
 <!-- /171157028/GameRestart -->
 <div id='div-gpt-ad-1479006188214-0' style='height:280px; width:336px;'>
 <script>
