--- a/index.html
+++ b/index.html
@@ -1,38 +1,4 @@
-<head>
-     <script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
-<script>
-  var googletag = googletag || {};
-  googletag.cmd = googletag.cmd || [];
-</script>
 
-<script>
-  googletag.cmd.push(function() {
-    googletag.defineSlot('/171157028/GameRestart', [336, 280], 'div-gpt-ad-1479006188214-0').addService(googletag.pubads());
-         googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-  });
-</script>
-</head>
-
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Splats -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:336px;height:280px"
-     data-ad-client="ca-pub-8505654302097602"
-     data-ad-slot="5993777779"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-
-
-<!-- /171157028/GameRestart -->
-<div id='div-gpt-ad-1479006188214-0' style='height:280px; width:336px;'>
-<script>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1479006188214-0'); });
-</script>
-</div>
 
 <h1 align="center" style="color:red;" >My stuff</h1>
 <h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;">Ludum Dare</a></h2>
@@ -43,14 +9,11 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1479006188214-0');
 
 <h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5>
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- splats -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:336px;height:280px"
-     data-ad-client="ca-pub-8505654302097602"
-     data-ad-slot="6087312978"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<!--UberCPM.com BANNER 300x250 - DO NOT MODIFY-->
+<script type="text/javascript"><!--
+document.write('<s'+'cript type="text/javascript" src="//ubercpm.com/show.php?z=27&pl=56583&j=1&code='+new Date().getTime()+'"></s'+'cript>'); 
+// --></script>
+<!--UberCPM.com BANNER 300x250 - DO NOT MODIFY-->
+
 
 
