--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 
 <h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5>
 
-<!--UberCPM.com BANNER 300x250 - DO NOT MODIFY-->
-<script type="text/javascript"><!--
-document.write('<s'+'cript type="text/javascript" src="//ubercpm.com/show.php?z=27&pl=56583&j=1&code='+new Date().getTime()+'"></s'+'cript>'); 
-// --></script>
-<!--UberCPM.com BANNER 300x250 - DO NOT MODIFY-->
+<script data-cfasync='false' type='text/javascript' src='//p179171.clksite.com/adServe/banners?tid=179171_323184_0'></script>
 
 
 
