--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5>
 
-<script data-cfasync='false' type='text/javascript' src='//p179171.clksite.com/adServe/banners?tid=179171_323184_0'></script>
-
+<script type="text/javascript"> var infolinks_pid = 2904562; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 
 
