--- a/index.html
+++ b/index.html
@@ -9,6 +9,5 @@
 
 <h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5>
 
-<script type="text/javascript"> var infolinks_pid = 2904562; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
-
+JOHN HUGHES CONFIRMED
 
