--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </script>
 
-
+<div style="display:inline-block">
 <center>
 <script type="text/javascript">
   ( function() {
@@ -45,3 +45,5 @@
 }());
 </script>
 <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+  
+</div>
