--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 </script>
 
-<div style="display:inline-block">
-  <div align="center">
+
+  <center>
     <script type="text/javascript">
       ( function() {
         if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
@@ -33,8 +33,8 @@
     }());
     </script>
     <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
-    </div>
-
+    </center>
+<div style="display:inline-block">
 <script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
