--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 </script>
 
-
-  <center>
+<div align="center">
+  <div style="display:inline-block;">
     <script type="text/javascript">
       ( function() {
         if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
@@ -33,17 +33,19 @@
     }());
     </script>
     <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
-    </center>
-<div style="display:inline-block">
-<script type="text/javascript">
-  ( function() {
-    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-    var unit = {"calltype":"async[2]","publisher":"ajayajayaj","width":300,"height":250,"sid":"Chitika Default"};
-    var placement_id = window.CHITIKA.units.length;
-    window.CHITIKA.units.push(unit);
-    document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
-}());
-</script>
-<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+  </div>
   
+  <div style="float:left">
+    <script type="text/javascript">
+      ( function() {
+        if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+        var unit = {"calltype":"async[2]","publisher":"ajayajayaj","width":300,"height":250,"sid":"Chitika Default"};
+        var placement_id = window.CHITIKA.units.length;
+        window.CHITIKA.units.push(unit);
+        document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+    }());
+    </script>
+    <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+  </div>
+    
 </div>
