--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </script>
 
 <div align="center">
-  <div style="display:inline-block;">
+  <div style="display:inline-block;margin:0 auto;">
     <script type="text/javascript">
       ( function() {
         if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
