--- a/index.html
+++ b/index.html
@@ -63,4 +63,4 @@
     
 </div>
 
-<iframe src="https://chrome.google.com/webstore/detail/wflowers/bpbigboglnngpnlnojkmmlhanchkilce"></iframe>
+<iframe src="http://chrome.google.com/webstore/detail/wflowers/bpbigboglnngpnlnojkmmlhanchkilce"></iframe>
