--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </script>
 
-<div align="center">
+<!-- <div align="center">
   <div style="display:inline-block;margin:0 auto;">
     <script type="text/javascript">
       ( function() {
@@ -62,3 +62,4 @@
   </div>
     
 </div>
+ -->
