--- a/LD games/ld37/index.html
+++ b/LD games/ld37/index.html
@@ -2,4 +2,4 @@
 
 <h1 align="center" ><a href="TheNextDimension.jar" style="color:red;">Here is the link</a></h1>
 
-<h1 align="center" style="color:orange;">Here is the Source</h1>
+<h1 align="center" ><a href="LD37-src.zipr" style="color:orange;">Here is the Source</a></h1>
