--- a/LD games/ld37/index.html
+++ b/LD games/ld37/index.html
@@ -1,5 +1,5 @@
-<h>Hello There</h>
+<h1a lign="center">Hello There</h1>
 
-<h1 align="center" ><a href="TheNextDimension.jar" style="color:red;">Here is the link</a></h1>
+<h2 align="center" ><a href="TheNextDimension.jar" style="color:red;">Here is the game</a></h2>
 
-<h1 align="center" ><a href="LD37-src.zipr" style="color:orange;">Here is the Source</a></h1>
+<h2 align="center" ><a href="LD37-src.zipr" style="color:orange;">Here is the Source</a></h2>
