--- a/LD games/ld37/index.html
+++ b/LD games/ld37/index.html
@@ -3,3 +3,14 @@
 <h2 align="center" ><a href="TheNextDimension.jar" style="color:red;">Here is the game</a></h2>
 
 <h2 align="center" ><a href="LD37-src.zipr" style="color:orange;">Here is the Source</a></h2>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-29489153-5', 'auto');
+  ga('send', 'pageview');
+
+</script>
