--- a/LD games/ld37/index.html
+++ b/LD games/ld37/index.html
@@ -2,7 +2,7 @@
 
 <h2 align="center" ><a href="TheNextDimension.jar" style="color:red;">Here is the game</a></h2>
 
-<h2 align="center" ><a href="LD37-src.zipr" style="color:orange;">Here is the Source</a></h2>
+<h2 align="center" ><a href="LD37-src.zip" style="color:orange;">Here is the Source</a></h2>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
