--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 <h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5>
 
+<br><br><br>
+
+<h5 align="center">Contact at dev at ajayinkingston.com</h5>
+
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
