--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <br><br><br><br><br>
 
-<h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5>
+<!-- <h5 align="center"><a href="/splats" style="color:magenta;">There's also this...</a></h5> -->
 
 <br><br><br>
 
