--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- <br><br><br> -->
 
-<h5 align="center">Contact at dev at ajayinkingston.com</h5>
+<h5 align="center">Contact at dev  @  ajayinkingston.com</h5>
 
 
 <script>
