--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h5 align="center">Contact at dev  @  ajayinkingston.com</h5>
 
 
-<script>
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -23,7 +23,7 @@
   ga('create', 'UA-29489153-4', 'auto');
   ga('send', 'pageview');
 
-</script>
+</script> -->
 
 
 
