--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <h1 align="center" style="color:red;" >My stuff</h1>
-<h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;font-family:Times New Roman;">Ludum Dare</a></h2>
+<h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;font-family:Comic Sans MS;">Ludum Dare</a></h2>
 <h3 align="center"><a href="https://play.google.com/store/apps/developer?id=Ajay+Ramachandran+-+The+best+person+in+the+world!!&hl=en" style="color:green;">Google Play</a></h3>
 <h4 align="center"><a href="https://github.com/ajayyy/" style="color:grey;">Git Hub</a></h4>
 
