--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <h1 align="center" style="color:red;" >My stuff</h1>
 <h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;font-family:Comic Sans MS;">Ludum Dare</a></h2>
-<h3 align="center"><a href="https://play.google.com/store/apps/developer?id=Ajay+Ramachandran+-+The+best+person+in+the+world!!&hl=en" style="color:green;">Google Play</a></h3>
-<h4 align="center"><a href="https://github.com/ajayyy/" style="color:grey;">Git Hub</a></h4>
+<h3 align="center"><a href="https://play.google.com/store/apps/developer?id=Ajay+Ramachandran+-+The+best+person+in+the+world!!&hl=en" style="color:green;font-family:Comic Sans MS;">Google Play</a></h3>
+<h4 align="center"><a href="https://github.com/ajayyy/" style="color:grey;font-family:Comic Sans MS;">Git Hub</a></h4>
 
 <br><br><br><br><br>
 
@@ -10,7 +10,7 @@
 
 <!-- <br><br><br> -->
 
-<h5 align="center">Contact at dev  @  ajayinkingston.com</h5>
+<h5 align="center" style="font-family:Comic Sans MS;">Contact at dev  @  ajayinkingston.com</h5>
 
 <!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
