--- a/yesnobetter.html
+++ b/yesnobetter.html
@@ -41,12 +41,20 @@
         </script>
 
 		<script type="text/javascript">
-
+			String.prototype.endsWith = function(suffix) {
+			    return this.indexOf(suffix, this.length - suffix.length) !== -1;
+			};
 			document.getElementById("face").innerHTML = "¯\\_(ツ)_/¯";
 
         	function randomAnswer(){
 
         		Math.seedrandom(document.getElementById('question').value);
+				if(document.getElementById('question').value.prototype.endsWith("\n"){
+					document.getElementById("background").className = "maybe";
+					document.getElementById("choice").className = "maybe";
+					document.getElementById("choice").innerHTML = "No Adding Enters!!";
+					document.getElementById("face").innerHTML = "Nice Try ¯\\_(ツ)_/¯";  
+				}
 				if(Math.random() > 0.5){
 					document.getElementById("background").className = "yes";
 					document.getElementById("choice").className = "yes";
