--- a/yesnobetter.html
+++ b/yesnobetter.html
@@ -55,7 +55,7 @@
 					document.getElementById("choice").innerHTML = "No Adding Enters!!";
 					document.getElementById("face").innerHTML = "Nice Try ¯\\_(ツ)_/¯";  
 				}
-				if(Math.random() > 0.5){
+				else if(Math.random() > 0.5){
 					document.getElementById("background").className = "yes";
 					document.getElementById("choice").className = "yes";
 					document.getElementById("choice").innerHTML = "Yes";
