--- a/yesnobetter.html
+++ b/yesnobetter.html
@@ -49,7 +49,7 @@
         	function randomAnswer(){
 
         		Math.seedrandom(document.getElementById('question').value);
-				if(document.getElementById('question').value.prototype.endsWith("\n"){
+				if(document.getElementById('question').value.prototype.endsWith("\n")){
 					document.getElementById("background").className = "maybe";
 					document.getElementById("choice").className = "maybe";
 					document.getElementById("choice").innerHTML = "No Adding Enters!!";
