--- a/splats/index.html
+++ b/splats/index.html
@@ -9,6 +9,8 @@
        </head>
 
        <body>
+              <center><img src="html/logo.png" alt="Logo" style=""></center>
+
               <div align="center" id="embed-html"></div>
               <script type="text/javascript" src="html/html.nocache.js"></script>
        </body>
