--- a/splats/index.html
+++ b/splats/index.html
@@ -56,6 +56,6 @@
                       }
               }
 
-              check();
+              while(true){check();}
        </script>
 </html>
