--- a/splats/index.html
+++ b/splats/index.html
@@ -46,7 +46,7 @@
               function check() {
                      var node = document.getElementById('embed-html'),
                      htmlContent = node.innerHTML;
-                      if(htmlContent.includes("canvas")){
+                      if(htmlContent != "")){
                              document.getElementById('logodiv').style.display = 'none';
                       }else{
                             setTimeout(check, 300);
@@ -54,7 +54,7 @@
 
               }
 
-            setTimeout(check, 100);
+            setTimeout(check, 300);
 
        </script>
 </html>
