--- a/splats/index.html
+++ b/splats/index.html
@@ -46,7 +46,7 @@
               function check() {
                      var node = document.getElementById('embed-html'),
                      htmlContent = node.innerHTML;
-                      if(htmlContent != ""){
+                      if(htmlContent.includes("canvas")){
                              document.getElementById('logodiv').style.display = 'none';
                       }else{
                             setTimeout(check, 100);
