--- a/splats/index.html
+++ b/splats/index.html
@@ -9,7 +9,10 @@
        </head>
 
        <body>
-              <div align="center" id="logodiv"><img src="html/logo.png" alt="Logo" style=""></div>
+              <div align="center" id="logodiv">
+                     <img src="html/logo.png" alt="Logo" style="">
+                     <h>Loading...</h>
+              </div>
 
               <div align="center" id="embed-html"></div>
               <script type="text/javascript" src="html/html.nocache.js"></script>
