--- a/splats/index.html
+++ b/splats/index.html
@@ -11,7 +11,7 @@
        <body>
               <div align="center" id="logodiv">
                      <img src="html/logo.png" alt="Logo" style="">
-                     <h>Loading...</h>
+                     <h1>Loading...</h1>
               </div>
 
               <div align="center" id="embed-html"></div>
