--- a/splats/index.html
+++ b/splats/index.html
@@ -9,7 +9,7 @@
        </head>
 
        <body>
-              <div align="center" id="logodiv" style="position: absolute;">
+              <div id="logodiv" style="position: absolute;left: 50%;">
                      <img src="html/logo.png" alt="Logo" style="">
                      <h1 style="font-size:400%;font-family:Arial;">Loading...</h1>
               </div>
