--- a/splats/index.html
+++ b/splats/index.html
@@ -10,8 +10,10 @@
 
        <body>
               <div id="logodiv" style="position: absolute;left: 50%;">
-                     <img src="html/logo.png" alt="Logo" style="">
-                     <h1 style="font-size:400%;font-family:Arial;">Loading...</h1>
+                     <div style="position:relative;left: -50%;border:dotted red 1px;">
+                            <img src="html/logo.png" alt="Logo" style="">
+                            <h1 style="font-size:400%;font-family:Arial;">Loading...</h1>
+                     </div>
               </div>
 
               <div align="center" id="embed-html"></div>
