--- a/splats/index.html
+++ b/splats/index.html
@@ -10,7 +10,7 @@
 
        <body>
               <div id="logodiv" style="position: absolute;left: 50%;">
-                     <div style="position:relative;left: -50%;border:dotted red 1px;">
+                     <div style="position:relative;left: -50%;">
                             <img src="html/logo.png" alt="Logo" style="">
                             <h1 style="font-size:400%;font-family:Arial;">Loading...</h1>
                      </div>
