--- a/splats/index.html
+++ b/splats/index.html
@@ -12,6 +12,8 @@
               <div id="logodiv" style="position: absolute;left: 50%;">
                      <div style="position:relative;left: -50%;">
                             <img src="html/logo.png" alt="Logo" style="">
+                     </div>
+                     <div style="position:relative;left: -50%;">
                             <h1 style="font-size:400%;font-family:Arial;">Loading...</h1>
                      </div>
               </div>
