--- a/splats/index.html
+++ b/splats/index.html
@@ -9,12 +9,16 @@
        </head>
 
        <body>
-              <div id="logodiv" style="position: absolute;left: 50%;">
-                     <div style="position:relative;left: -50%;">
-                            <img src="html/logo.png" alt="Logo" style="">
+              <div id="logodiv" >
+                     <div style="position: absolute;left: 50%;">
+                            <div style="position:relative;left: -50%;">
+                                   <img src="html/logo.png" alt="Logo" style="">
+                            </div>
                      </div>
-                     <div style="position:relative;left: -50%;">
-                            <h1 style="font-size:400%;font-family:Arial;">Loading...</h1>
+                     <div style="position: absolute;left: 50%;">
+                            <div style="position:relative;left: -50%;">
+                                   <h1 style="font-size:400%;font-family:Arial;">Loading...</h1>
+                            </div>
                      </div>
               </div>
 
