--- a/splats/index.html
+++ b/splats/index.html
@@ -15,7 +15,7 @@
                                    <img src="html/logo.png" alt="Logo" style="">
                             </div>
                      </div>
-                     <div style="position: absolute;left: 50%;">
+                     <div style="position: absolute;left:50%;bottom:0%">
                             <div style="position:relative;left: -50%;">
                                    <h1 style="font-size:400%;font-family:Arial;">Loading...</h1>
                             </div>
