--- a/splats/index.html
+++ b/splats/index.html
@@ -59,6 +59,8 @@
                      htmlContent = node.innerHTML;
                       if(htmlContent.includes("canvas")){
                              document.getElementById('logodiv').style.display = 'none';
+                      }else  if(htmlContent.includes("init_timeout")){
+                             window.location.reload(false); 
                       }else{
                             setTimeout(check, 100);
                       }
@@ -69,3 +71,6 @@
 
        </script>
 </html>
+
+
+}
