--- a/splats/index.html
+++ b/splats/index.html
@@ -59,7 +59,7 @@
                      htmlContent = node.innerHTML;
                       if(htmlContent.includes("canvas")){
                              document.getElementById('logodiv').style.display = 'none';
-                      }else  if(htmlContent.includes("init_timeout")){
+                      }else  if(htmlContent.includes("gwt-TextArea gwt-TextArea-readonly")){
                              window.location.reload(true); 
                       }else{
                             setTimeout(check, 100);
