--- a/splats/index.html
+++ b/splats/index.html
@@ -9,6 +9,12 @@
        </head>
 
        <body>
+              
+              <style type="text/css">
+                     body {
+                         overflow:hidden;
+                     }
+              </style>
               <div id="logodiv" >
                      <div style="position: absolute;left: 50%;">
                             <div style="position:relative;left: -50%;">
