--- a/splats/index.html
+++ b/splats/index.html
@@ -26,6 +26,11 @@
                                    <h1 style="font-size:600%;font-family:Arial;">Loading...</h1>
                             </div>
                      </div>
+                     <div style="position: absolute;left:50%;bottom:50%">
+                            <div style="position:relative;left: -50%;">
+                                   <h1 style="font-size:100%;font-family:Arial;">If you just keep seeing a white box flash, try disabling Adobe Flash Player</h1>
+                            </div>
+                     </div>
               </div>
 
               <div align="center" id="embed-html"></div>
