--- a/splats/index.html
+++ b/splats/index.html
@@ -20,13 +20,15 @@
                             <div style="position:relative;left: -50%;">
                                    <img src="html/logo.png" alt="Logo" style="">
                             </div>
-                            <div style="position:relative;left: -50%;">
-                                   <h1 style="font-size:100%;font-family:Arial;">If you just keep seeing a white box flash, try disabling Adobe Flash Player</h1>
-                            </div>
                      </div>
                      <div style="position: absolute;left:50%;bottom:0%">
                             <div style="position:relative;left: -50%;">
                                    <h1 style="font-size:600%;font-family:Arial;">Loading...</h1>
+                            </div>
+                     </div>
+                     <div style="position: absolute;left:50%;bottom:70%">
+                            <div style="position:relative;left: -50%;">
+                                   <h1 style="font-size:100%;font-family:Arial;">If you just keep seeing a white box flash, try disabling Adobe Flash Player</h1>
                             </div>
                      </div>
               </div>
