--- a/splats/index.html
+++ b/splats/index.html
@@ -39,6 +39,7 @@
 
        <script>
               function handleMouseDown(evt) {
+                window.focus();
                 evt.preventDefault();
                 evt.stopPropagation();
                 evt.target.style.cursor = 'default';
