--- a/splats/index.html
+++ b/splats/index.html
@@ -3,6 +3,9 @@
        <head>
               <title>Bouncee</title>
               <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+              <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+              <meta http-equiv="Pragma" content="no-cache" />
+              <meta http-equiv="Expires" content="0" />
               <link href="styles.css" rel="stylesheet" type="text/css">
               <script src="soundmanager2-setup.js"></script>
   			  <script src="soundmanager2-jsmin.js"></script>
