--- a/splats/index.html
+++ b/splats/index.html
@@ -2,10 +2,11 @@
 <html>
        <head>
               <title>Bouncee</title>
-              <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-              <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-              <meta http-equiv="Pragma" content="no-cache" />
-              <meta http-equiv="Expires" content="0" />
+             <meta http-equiv="cache-control" content="max-age=0" />
+              <meta http-equiv="cache-control" content="no-cache" />
+              <meta http-equiv="expires" content="0" />
+              <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+              <meta http-equiv="pragma" content="no-cache" />
               <link href="styles.css" rel="stylesheet" type="text/css">
               <script src="soundmanager2-setup.js"></script>
   			  <script src="soundmanager2-jsmin.js"></script>
