--- a/splats/index.html
+++ b/splats/index.html
@@ -76,7 +76,7 @@
                       if(htmlContent.includes("canvas")){
                              document.getElementById('logodiv').style.display = 'none';
                       }else  if(htmlContent.includes("gwt-TextArea gwt-TextArea-readonly")){
-                             window.location.reload(); 
+//                              window.location.reload(); 
                       }else{
                             setTimeout(check, 100);
                       }
