--- a/splats/index.html
+++ b/splats/index.html
@@ -36,8 +36,11 @@
                             </div>
                      </div>
               </div>
-
-              <div align="center" id="embed-html"></div>
+              <div style="position: absolute;left: 50%;">
+                     <div style="position:relative;left: -50%;">
+                            <div align="center" id="embed-html"></div>
+                     </div>
+              </div>
               <script type="text/javascript" src="html/html.nocache.js"></script>
        </body>
 
