--- a/splats/index.html
+++ b/splats/index.html
@@ -7,6 +7,9 @@
               <meta http-equiv="expires" content="0" />
               <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
               <meta http-equiv="pragma" content="no-cache" />
+              <meta name="description" content="The newest in io mmo games! Bounce around planets in zero-g space!">
+                <meta name="keywords" content="planetsio, planets, planet game, plane.ts.io, planets.io, space, space game, space io game, libGDX, slitherio, slither, slither.io, iogames, fun multiplayer game, wormax, splixio, splix.io, online multiplayer, strategy, game, strategy game, io games, agar.io, multiplayer, conquer, conquer land, capture, games, fun, massive multiplayer, web browser games, html5, flash, web game">
+                <meta name="author" content="Ajay Ramachandran">
               <link href="styles.css" rel="stylesheet" type="text/css">
               <script src="soundmanager2-setup.js"></script>
   			  <script src="soundmanager2-jsmin.js"></script>
