--- a/splats/index.html
+++ b/splats/index.html
@@ -2,6 +2,9 @@
 <html>
        <head>
               <title>Bouncee</title>
+              <meta name="apple-mobile-web-app-capable" content="yes">
+              <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
              <meta http-equiv="cache-control" content="max-age=0" />
               <meta http-equiv="cache-control" content="no-cache" />
               <meta http-equiv="expires" content="0" />
@@ -12,7 +15,7 @@
                 <meta name="author" content="Ajay Ramachandran">
               <link href="styles.css" rel="stylesheet" type="text/css">
               <script src="soundmanager2-setup.js"></script>
-  			  <script src="soundmanager2-jsmin.js"></script>
+                <script src="soundmanager2-jsmin.js"></script>
        </head>
 
        <body>
