--- a/splats/index.html
+++ b/splats/index.html
@@ -3,7 +3,7 @@
        <head>
               <title>Bouncee</title>
               <meta name="apple-mobile-web-app-capable" content="yes">
-              <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<!--               <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
 
              <meta http-equiv="cache-control" content="max-age=0" />
               <meta http-equiv="cache-control" content="no-cache" />
