--- a/memes/index.html
+++ b/memes/index.html
@@ -1,1 +1,1 @@
-<center><img src="https://lh3.googleusercontent.com/-K_B3U103bOg/WKZsh2C5eWI/AAAAAAAARWU/aYf8bHAXb8UTTfULdOnSpTly5eOuKdikwCL0B/h225/2017-02-16.gif" alt="Hues"></center>
+<center><img src="729214536063110430-account_id%3D1.gif" alt="Hues"></center>
