--- a/mom/index.html
+++ b/mom/index.html
@@ -74,7 +74,7 @@ Idea:
     idea += " " + randomitem;
     idea += ", you will have the perfect gift!"
     
-    document.getElementById("giftIdea").innerHTML = idea;
+    document.getElementById("giftIdea").innerHTML = "<center>" + idea + "</center>";
   }
   
   function getRandomInt(max) {
