--- a/mom/index.html
+++ b/mom/index.html
@@ -1,7 +1,7 @@
 <style>
   *{
     font-family: sans-serif;
-    font-size: 20
+    font-size: 20px
   }
 </style>
 
@@ -11,7 +11,7 @@ So, as always, I could not think of anything. So, I decided to make a GIFT IDEA 
 <b>DISCLAIMER: </b> Sorry for these being so bad
 <p/>
 
-<button onclick="generate()"> Generate a gift idea! :P </button>
+<button onclick="generate()" > Generate a gift idea! :P </button>
 <p/>
 
 Idea: 
