--- a/mom/index.html
+++ b/mom/index.html
@@ -8,6 +8,8 @@
 So, as always, I could not think of anything. So, I decided to make a GIFT IDEA GENERATOR!!! This shows you an action you could do, to gain a random reward.
 <p/>
 
+<h1>HAPPY BIRTHDAY MOM!!</h1>
+
 <b>DISCLAIMER: </b> Sorry for these being so bad
 <p/>
 
