--- a/mom/index.html
+++ b/mom/index.html
@@ -3,17 +3,20 @@
     font-family: sans-serif;
     font-size: 20px
   }
+ title{
+   font-size: 50px
+ }
 </style>
 
 So, as always, I could not think of anything. So, I decided to make a GIFT IDEA GENERATOR!!! This shows you an action you could do, to gain a random reward.
 <p/>
 
-<h1>HAPPY BIRTHDAY MOM!!</h1>
+<h1 id="title" >HAPPY BIRTHDAY MOM!!</h1>
 
 <b>DISCLAIMER: </b> Sorry for these being so bad
 <p/>
 
-<button onclick="generate()" > Generate a gift idea! :P </button> <---- Hit this button
+<button onclick="generate()" id="button" > Generate a gift idea! :P </button> <---- Hit this button
 <p/>
 
 Idea: 
