--- a/mom/index.html
+++ b/mom/index.html
@@ -1,11 +1,11 @@
 <style>
   *{
     font-family: sans-serif;
-    font-size: 20px
+    font-size: 20px;
   }
  h1{
-   font-size: 50px
-   color: 00ff00
+   font-size: 50px;
+   color: 00ff00;
  }
 </style>
 
