--- a/splats/index.html
+++ b/splats/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
        <head>
-              <title>Bouncee</title>
+              <title>The Best Game Around!</title>
               <meta name="apple-mobile-web-app-capable" content="yes">
 <!--               <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
 
