--- a/splats/index.html
+++ b/splats/index.html
@@ -80,6 +80,8 @@
        </script>
        
        <script>
+              window.history.pushState("object or string", "Plane.ts.io!", "http://plane.ts.io");
+
               function check() {
                      var node = document.getElementById('embed-html'),
                      htmlContent = node.innerHTML;
