--- a/splats/index.html
+++ b/splats/index.html
@@ -80,7 +80,7 @@
        </script>
        
        <script>
-              window.history.pushState("object or string", "Plane.ts.io!", "http://plane.ts.io");
+              window.history.replaceState("object or string", "Plane.ts.io!", "http://plane.ts.io");
 
               function check() {
                      var node = document.getElementById('embed-html'),
