--- a/biglobby/index.html
+++ b/biglobby/index.html
@@ -1,7 +1,7 @@
-<h1 style="color:magenta,font-family:Comic Sans MS;"> 1. Download https://github.com/polarathene/biglobby/archive/v2.43.zip , https://modworkshop.net/mydownloads.php?action=view_down&did=197 ,  https://github.com/JamesWilko/Payday-2-BLT/releases/download/1.07/Payday2BLT_r11_r5.zip </h1>
-<h1 style="color:green,font-family:Comic Sans MS;"> 2. Extract the zip files, and open PDBundleModPatcher.exe in the Bundle Modder folder. </h1>
-<h1 style="color:blue,font-family:Comic Sans MS;"> 3. Press OK, and paste this into the Game Asset Folder text box ( C:\Program Files (x86)\Steam\steamapps\common\PAYDAY 2\assets ) </h1>
-<h1 style="color:orange,font-family:Comic Sans MS;"> 4. Go to the Mods tab, hit Add Mod(s), and add the .pdmod file in the big lobby folder. Then check it and hit Apply Changes </h1>
-<h1 style="color:yellow,font-family:Comic Sans MS;"> 5. Copy contents of BLT folder into the game folder (C:\Program Files (x86)\Steam\steamapps\common\PAYDAY 2\) </h1>
-<h1 style="color:grey,font-family:Comic Sans MS;"> 6. Copy the folder called "biglobby" in the big lobby folder you downloaded into the newly created mods folder (you dragged it from the BLT folder into the game folder) </h1>
-<h1 style="color:red,font-family:Comic Sans MS;" > 7. You are done! </h1>
+<h1 style="color:magenta;font-family:Comic Sans MS;"> 1. Download https://github.com/polarathene/biglobby/archive/v2.43.zip , https://modworkshop.net/mydownloads.php?action=view_down&did=197 ,  https://github.com/JamesWilko/Payday-2-BLT/releases/download/1.07/Payday2BLT_r11_r5.zip </h1>
+<h1 style="color:green;font-family:Comic Sans MS;"> 2. Extract the zip files, and open PDBundleModPatcher.exe in the Bundle Modder folder. </h1>
+<h1 style="color:blue;font-family:Comic Sans MS;"> 3. Press OK, and paste this into the Game Asset Folder text box ( C:\Program Files (x86)\Steam\steamapps\common\PAYDAY 2\assets ) </h1>
+<h1 style="color:orange;font-family:Comic Sans MS;"> 4. Go to the Mods tab, hit Add Mod(s), and add the .pdmod file in the big lobby folder. Then check it and hit Apply Changes </h1>
+<h1 style="color:yellow;font-family:Comic Sans MS;"> 5. Copy contents of BLT folder into the game folder (C:\Program Files (x86)\Steam\steamapps\common\PAYDAY 2\) </h1>
+<h1 style="color:grey;font-family:Comic Sans MS;"> 6. Copy the folder called "biglobby" in the big lobby folder you downloaded into the newly created mods folder (you dragged it from the BLT folder into the game folder) </h1>
+<h1 style="color:red;font-family:Comic Sans MS;" > 7. You are done! </h1>
