--- a/biglobby/index.html
+++ b/biglobby/index.html
@@ -1,5 +1,13 @@
-<style>     background-color: cyan;
+<head>
+<style>
+body {
+    background-color: cyan;
+}
 </style>
+</head>
+
+<body>
+
 
 <h1 style="color:magenta;font-family:Comic Sans MS;"> 1. Download <a style="color:magenta;font-family:Comic Sans MS;" href="https://github.com/polarathene/biglobby/archive/v2.43.zip">https://github.com/polarathene/biglobby/archive/v2.43.zip</a> </h1>
 <h1> <a style="color:magenta;font-family:Comic Sans MS;" href="https://modworkshop.net/mydownloads.php?action=view_down&did=197">https://modworkshop.net/mydownloads.php?action=view_down&did=197 </h1>
@@ -10,3 +18,5 @@
 <h1 style="color:yellow;font-family:Comic Sans MS;"> 5. Copy contents of BLT folder into the game folder (C:\Program Files (x86)\Steam\steamapps\common\PAYDAY 2\) </h1>
 <h1 style="color:grey;font-family:Comic Sans MS;"> 6. Copy the folder called "biglobby" in the big lobby folder you downloaded into the newly created mods folder (you dragged it from the BLT folder into the game folder) </h1>
 <h1 style="color:red;font-family:Comic Sans MS;" > 7. You are done! </h1>
+
+</body>
