--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- <br><br><br> -->
 
-<h5 align="center" style="font-family:Comic Sans MS;">Contact me: dev  @  ajayinkingston.com. I should answer within a day.</h5>
+<h5 align="center" style="font-family:Comic Sans MS;">Contact me: dev  @  ajayinkingston.com. I should answer within a day, or as soon as possible.</h5>
 
 <!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
