--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <h1 align="center" style="color:red;font-family:Comic Sans MS;" >My stuff</h1>
 <h2 align="center" ><a href="https://ldjam.com/users/ajayajayaj/" style="color:ff7700;font-family:Comic Sans MS;">Ludum Dare (New Site)</a></h2>
-<h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;font-family:Comic Sans MS;">Ludum Dare (Old Site)</a></h2>
+<h2 align="center" font-size="75%"><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;font-family:Comic Sans MS;">Ludum Dare (Old Site)</a></h2>
+<h2 align="center" font-size="60%"><a href="http://onehourgamejam.com/?page=author&author=ajayajayaj" style="color:#CF1161;font-family:Comic Sans MS;">One Hour Game Jam</a></h2>
 <h3 align="center"><a href="https://play.google.com/store/apps/developer?id=Ajay+Ramachandran+-+The+best+person+in+the+world!!&hl=en" style="color:green;font-family:Comic Sans MS;">Google Play</a></h3>
 <h4 align="center"><a href="https://github.com/ajayyy/" style="color:grey;font-family:Comic Sans MS;">Git Hub</a></h4>
 
