--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<h1 align="center" style="color:red;font-family:Comic Sans MS;" >My stuff</h1>
+<h1 align="center" style="color:red;font-family:Comic Sans MS;" >Hi, this is Ajay Ramachandran</h1>
 <h2 align="center" ><a href="https://ldjam.com/users/ajayajayaj/" style="color:ff7700;font-family:Comic Sans MS;">Ludum Dare (New Site)</a></h2>
 <h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;font-family:Comic Sans MS;font-size:85%;">Ludum Dare (Old Site)</a></h2>
 <h2 align="center" ><a href="http://onehourgamejam.com/?page=author&author=ajayajayaj" style="color:#CF1161;font-family:Comic Sans MS;font-size:75%;">One Hour Game Jam</a></h2>
