--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
+<p style=position: fixed;bottom: 0;left: 0;>Created by Ajay Ramachandran</p>
+
 <h1 align="center" style="color:red;font-family:Comic Sans MS;" >Hi, this is Ajay</h1>
 <h2 align="center" ><a href="https://ldjam.com/users/ajayajayaj/" style="color:ff7700;font-family:Comic Sans MS;">Ludum Dare (New Site)</a></h2>
 <h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;font-family:Comic Sans MS;font-size:85%;">Ludum Dare (Old Site)</a></h2>
