--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<p style="position:fixed;bottom:0;left:0;">Created by Ajay Ramachandran</p>
+<div style="position:fixed;bottom:5;left:0;">Created by Ajay Ramachandran</div>
 
 <h1 align="center" style="color:red;font-family:Comic Sans MS;" >Hi, this is Ajay</h1>
 <h2 align="center" ><a href="https://ldjam.com/users/ajayajayaj/" style="color:ff7700;font-family:Comic Sans MS;">Ludum Dare (New Site)</a></h2>
