--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta name="google-site-verification" content="FeGdzO_jjneHZDbXi1qm1lyg_uJX1EZu961-yXtqBOY" />
+<head><meta name="google-site-verification" content="FeGdzO_jjneHZDbXi1qm1lyg_uJX1EZu961-yXtqBOY" /></head>
 
 <div style="position:fixed;bottom:5;left:0;">Created by Ajay Ramachandran</div>
 
