--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 
-
+<head>
+<meta name="google-site-verification" content="FeGdzO_jjneHZDbXi1qm1lyg_uJX1EZu961-yXtqBOY" />
+</head> 
 <div style="position:fixed;bottom:5;left:0;">Created by Ajay Ramachandran</div>
 
 <h1 align="center" style="color:red;font-family:Comic Sans MS;" >Hi, this is Ajay</h1>
