--- a/work.html
+++ b/work.html
@@ -1,1 +1,1 @@
-<div style="font-size:900%" >Shut up please, I am trying to concentrate. Don't you dare talk to me</div>
+<div style="font-size:900%" >I am ignoring you for a reason, I am trying to concentrate. STOP TALKING TO ME</div>
