--- a/GTX1050.html
+++ b/GTX1050.html
@@ -1,1 +1,1 @@
-<a href="https://egpu.io/forums/expresscard-mpcie-m-2-adapters/nvidia-is-killing-off-mpciengff-m2-egpus-error-43-with-372-90/paged/8/#post-19273">Click here for the article</a>
+<a href="https://egpu.io/forums/expresscard-mpcie-m-2-adapters/the-definitive-fix-for-error-43-on-non-hotplug-interfaces-with-gtx10xx-cards/">Click here for the article</a>
