--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h2 align="center" ><a href="https://ldjam.com/users/ajayajayaj/" style="color:ff7700;font-family:Comic Sans MS;">Ludum Dare (New Site)</a></h2>
 <h2 align="center" ><a href="http://ludumdare.com/compo/author/ajayajayaj/" style="color:orange;font-family:Comic Sans MS;font-size:85%;">Ludum Dare (Old Site)</a></h2>
 <h2 align="center" ><a href="http://onehourgamejam.com/?page=author&author=ajayajayaj" style="color:#CF1161;font-family:Comic Sans MS;font-size:75%;">One Hour Game Jam</a></h2>
-<h3 align="center"><a href="https://play.google.com/store/apps/developer?id=Ajay+Ramachandran+-+The+best+person+in+the+world!!&hl=en" style="color:green;font-family:Comic Sans MS;">Google Play</a></h3>
+<h3 align="center"><a href="https://play.google.com/store/apps/dev?id=5273797972836811580" style="color:green;font-family:Comic Sans MS;">Google Play</a></h3>
 <h4 align="center"><a href="https://github.com/ajayyy/" style="color:grey;font-family:Comic Sans MS;">Git Hub</a></h4>
 
 <br><br><br><br><br>
